<resources>
    <string name="app_name">Auto Secretary</string>
    <string name="widget_name">Auto Secretary – Aufgaben</string>
    <string name="nav_today">heute</string>
    <string name="nav_all">alles ansehen</string>
    <string name="nav_options">optionen</string>
    <string name="action_add_task">Aufgabe anlegen</string>
    <string name="widget_empty_title">Gerade ist nichts offen.</string>
    <string name="widget_open_dashboard">Dashboard öffnen</string>
    <string name="widget_toggle_step">Schritt „%1$s“ umschalten</string>
    <string name="widget_confirm_close">„%1$s“ in der App abschließen</string>
    <string name="widget_add_symbol">＋</string>
    <string name="widget_step_open_symbol">○</string>
    <string name="widget_step_done_symbol">●</string>
    <string name="content_add_task">Aufgabe anlegen</string>
    <string name="content_task_menu">Aufgabenmenü</string>
    <string name="content_complete_task">%1$s erledigen, %2$d XP</string>
    <string name="content_complete_step">%1$s erledigen, %2$d XP</string>
    <string name="content_advance_planned_repetitions">nächsten Planwert %1$d bestätigen, bei Abschluss %2$d XP</string>
    <string name="marker_now">jetzt</string>
    <string name="marker_after">danach</string>
    <string name="marker_later">später, sobald Platz ist</string>
    <string name="marker_overdue">überfällig</string>
    <string name="marker_done">geschafft</string>
    <string name="greeting_night">Gute Nacht</string>
    <string name="greeting_early">Noch früh</string>
    <string name="greeting_morning">Guten Morgen</string>
    <string name="greeting_forenoon">Vormittag</string>
    <string name="greeting_noon">Mittag</string>
    <string name="greeting_afternoon">Nachmittag</string>
    <string name="greeting_evening">Guten Abend</string>
    <string name="greeting_late">Es wird spät</string>
    <string name="today_placement_label">Heute · %1$s</string>
    <string name="action_later">später</string>
    <string name="action_complete">erledigen</string>
    <string name="action_complete_all">Alle erledigen</string>
    <string name="action_complete_rest">Rest erledigen</string>
    <string name="action_finish_today">Für heute abschließen</string>
    <string name="content_step_actions">Weitere Aktionen für %1$s</string>
    <string name="action_undo">Rückgängig</string>
    <string name="content_undo_task">%1$s rückgängig machen, %2$d XP zurücknehmen</string>
    <string name="completed_today_expand">Heute erledigte Aufgaben anzeigen</string>
    <string name="completed_today_collapse">Heute erledigte Aufgaben ausblenden</string>
    <string name="xp_summary">%1$d XP · jeder Schritt zählt</string>
    <string name="xp_level">Stufe %1$d</string>
    <string name="xp_progress">%1$d/%2$d</string>
    <string name="vessel_ready">%1$d XP gesammelt, erntereif</string>
    <string name="vessel_progress">%1$d von %2$d Schritten, %3$d XP gesammelt</string>
    <string name="vessel_ready_breakdown">%1$d XP erntbar; %2$d XP mal Faktor %3$s</string>
    <string name="vessel_progress_breakdown">%1$d von %2$d Schritten; %3$d XP erntbar; %4$d XP mal Faktor %5$s</string>
    <string name="soft_time_ongoing">fortlaufend, bis die Bedingung erfüllt ist</string>
    <string name="soft_time_morning">heute am Morgen</string>
    <string name="soft_time_midday">um die Mittagszeit</string>
    <string name="soft_time_evening">heute am Abend</string>
    <string name="soft_time_later">später, sobald Platz ist</string>
    <string name="next_mark_done">Als erledigt markieren</string>
    <string name="next_all_done">Alles erledigt</string>
    <string name="calendar_fixed">im Kalender, fest</string>
    <string name="calendar_all_day">ganztägig</string>
    <string name="calendar_untitled">Termin</string>
    <string name="empty_title">Gerade ist nichts offen. Das ist auch gut.</string>
    <string name="empty_subtitle">Lege nur die eine Sache an, die dir gerade helfen würde.</string>
    <string name="all_title">alles organisieren</string>
    <string name="all_search_hint">Aufgaben und Schritte suchen</string>
    <string name="all_status_active">aktiv</string>
    <string name="all_status_archived">Archiv</string>
    <string name="all_status_all">alle</string>
    <string name="all_empty_title">Hier passt gerade nichts zum Filter.</string>
    <string name="all_empty_subtitle">Ändere Suche oder Filter – deine Aufgaben bleiben erhalten.</string>
    <string name="all_no_tasks_title">Noch keine Aufgabe angelegt.</string>
    <string name="all_no_tasks_subtitle">Lege eine Aufgabe an und zerlege sie später in ruhige Schritte.</string>
    <string name="all_filter_time">Tageszeit</string>
    <string name="all_filter_rhythm">Rhythmus</string>
    <string name="all_filter_status">Status</string>
    <string name="all_filter_day">Wochentag</string>
    <string name="all_every_day">alle Tage</string>
    <string name="all_filter_action">Filtern</string>
    <string name="all_order_action">Reihenfolge</string>
    <string name="all_order_help">Halte eine Aufgabe gedrückt und ziehe sie an ihre neue Position.</string>
    <string name="all_done">Fertig</string>
    <string name="all_filter_sheet_title">Aufgaben filtern</string>
    <string name="all_filter_sheet_hint">Änderungen sind sofort sichtbar.</string>
    <string name="all_filter_reset">zurücksetzen</string>
    <string name="all_filter_value">%1$s: %2$s</string>
    <string name="all_filter_selected_count">%1$d gewählt</string>
    <string name="all_task_result">%1$d Aufgaben, %2$d Schritte</string>
    <string name="all_task_result_filtered">%1$d von %2$d Aufgaben</string>
    <plurals name="all_schedule_result">
        <item quantity="one">%1$d Einordnung</item>
        <item quantity="other">%1$d Einordnungen</item>
    </plurals>
    <string name="all_schedule_result_filtered">%1$d von %2$d Einordnungen</string>
    <string name="all_steps_count">%1$d Schritte</string>
    <string name="all_step_count">1 Schritt</string>
    <string name="all_no_steps">keine Schritte</string>
    <string name="all_steps_matching">%1$d von %2$d Schritten passen</string>
    <string name="all_add_step">Schritt hinzufügen</string>
    <string name="all_drag_task">Aufgabe halten und verschieben</string>
    <string name="all_drag_step">Schritt halten und verschieben</string>
    <string name="all_archived">abgeschlossen</string>
    <string name="all_next_due">nächster Termin %1$s</string>
    <string name="all_no_due">ohne nächsten Termin</string>
    <string name="all_task_meta">%1$s, %2$s, %3$s</string>
    <string name="all_empty_search_title">Kein Suchtreffer.</string>
    <string name="all_empty_search_subtitle">Versuche einen anderen Suchbegriff. Die Filter bleiben erhalten.</string>
    <string name="all_empty_filter_title">Keine Aufgabe erfüllt diese Filter.</string>
    <string name="all_empty_filter_subtitle">Entferne einen Zeit-, Rhythmus- oder Tagesfilter.</string>
    <string name="all_empty_filter_sort_subtitle">Entferne einen Zeit-, Rhythmus- oder Tagesfilter.</string>
    <string name="all_empty_status_title">Dieser Bereich ist leer.</string>
    <string name="all_empty_status_subtitle">Wechsle zwischen aktiven, archivierten oder allen Aufgaben.</string>
    <string name="a11y_expand_task">Schritte anzeigen</string>
    <string name="a11y_collapse_task">Schritte ausblenden</string>
    <string name="a11y_task_row">Aufgabe %1$s. %2$s</string>
    <string name="a11y_task_menu">Menü für Aufgabe %1$s</string>
    <string name="a11y_edit_task">Aufgabe %1$s bearbeiten</string>
    <string name="a11y_step_row">Schritt %1$s. Antippen zum Bearbeiten, lange drücken zum Verschieben.</string>
    <string name="a11y_archived_step_row">Archivierter Schritt %1$s. Nur Lesen.</string>
    <string name="a11y_add_step_target">Neuen Schritt zu dieser Aufgabe hinzufügen oder einen Schritt hier ablegen.</string>
    <string name="a11y_schedule_row">Aufgabe %1$s, Tageszeit %2$s, Rhythmus %3$s. Lange drücken zum Verschieben.</string>
    <string name="a11y_step_up">Schritt nach oben verschieben</string>
    <string name="a11y_step_down">Schritt nach unten verschieben</string>
    <string name="a11y_step_previous_task">Schritt zur vorherigen Aufgabe verschieben</string>
    <string name="a11y_step_next_task">Schritt zur nächsten Aufgabe verschieben</string>
    <string name="a11y_step_select_swap">Schritt zum Tauschen auswählen</string>
    <string name="a11y_step_swap_selected">Mit ausgewähltem Schritt tauschen</string>
    <string name="a11y_step_selected">Schritt zum Tauschen ausgewählt.</string>
    <string name="a11y_today_step_row">Schritt %1$s. Lange drücken zum heutigen Verschieben.</string>
    <string name="a11y_today_step_front">Für heute ganz nach vorn verschieben</string>
    <string name="a11y_today_step_back">Für heute ganz nach hinten verschieben</string>
    <string name="a11y_today_step_moved">Heutige Schritt-Reihenfolge geändert.</string>
    <string name="a11y_today_step_select">Schritt nach vorn holen</string>
    <string name="a11y_today_step_selected">Schritt nach vorn geholt.</string>
    <string name="a11y_editor_chip">%1$s</string>
    <string name="a11y_editor_chip_selected">%1$s, ausgewählt</string>
    <string name="a11y_editor_move_up">nach oben</string>
    <string name="a11y_editor_move_down">nach unten</string>
    <string name="a11y_editor_move_up_step">%1$s nach oben verschieben</string>
    <string name="a11y_editor_move_down_step">%1$s nach unten verschieben</string>
    <string name="a11y_editor_step_row">Schritt %1$d, %2$s, %3$s, bearbeiten</string>
    <string name="a11y_editor_summary_row">%1$s, %2$s, %3$s</string>
    <string name="a11y_editor_value_row">%1$s, %2$s</string>
    <string name="a11y_schedule_up">Zeitplatzierung nach oben verschieben</string>
    <string name="a11y_schedule_down">Zeitplatzierung nach unten verschieben</string>
    <string name="a11y_schedule_previous_slot">In die vorherige Tageszeit verschieben</string>
    <string name="a11y_schedule_next_slot">In die nächste Tageszeit verschieben</string>
    <string name="all_placeholder_title">Alles ansehen kommt später.</string>
    <string name="all_placeholder_subtitle">Heute bleibt vorerst dein ruhiger Arbeitsbereich.</string>
    <string name="options_title">optionen</string>
    <string name="options_appearance">Darstellung</string>
    <string name="options_appearance_description">Farben folgen der Uhr. Der Sonnenstand bleibt immer in Bewegung.</string>
    <string name="options_focus_steps">Folgeschritte im Fokusblatt</string>
    <string name="options_focus_steps_description">Automatisch nutzt den verfügbaren Platz. Eine Zahl setzt die maximale Anzahl sichtbarer Folgeschritte.</string>
    <string name="options_rest_timer">Standard für Satzpausen</string>
    <string name="options_rest_timer_description">Satzschritte erben diese Pause, solange sie keinen eigenen Wert verwenden.</string>
    <string name="options_combos">Kombos</string>
    <string name="options_combos_description">Gewinn und Verlust gelten für Aufgabe und Schritt. Null schaltet den jeweiligen Effekt ab; freie Tage bleiben immer neutral.</string>
    <string name="combo_gain">Bei Erledigung</string>
    <string name="combo_decay">Bei Versäumnis</string>
    <string name="combo_trigger_missed">Termin verpasst</string>
    <string name="combo_trigger_daily">Täglich überfällig</string>
    <string name="combo_trigger_next">Beim nächsten Termin</string>
    <string name="field_backlog_label">Wenn Termine offen bleiben</string>
    <string name="backlog_collapse">Zusammenfassen</string>
    <string name="backlog_accumulate">Einzeln nachholen</string>
    <string name="editor_cancel">abbrechen</string>
    <string name="action_save">Speichern</string>
    <string name="action_discard">verwerfen</string>
    <string name="action_delete">Löschen</string>
</resources>